--- a/0x04-TypeScript/task_5/tsconfig.json
+++ b/0x04-TypeScript/task_5/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "../0x04-TypeScript/task_5/dist",
+    "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "es6",
